--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,15 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TestViewModel"
-        android:fullBackupContent="true">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.TestViewModel">
+        <activity android:name=".mainActivity3.MainActivity3"></activity>
+        <activity android:name=".mainActivity2.MainActivity2" />
+        <activity android:name=".mainActivity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
